# RanNCGinCplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MissionBrief.md  README.md  TODO.md
apps/data_analysis/: AverageEigenvalues.ipynb  AverageEigenvalues.py  CMakeLists.txt  action_autocorrelation.py  autocorrelation.py  average_eigenvalues.cpp  spectral_variance.py
apps/simulation/: CMakeLists.txt  DefaultActionSimulations.cpp  Simulation.cpp  SimulationData.hpp  Type11Simulation.cpp  Type11Simulation.hpp
include/RanNCG/: Clifford.h  DiracMatrices.h  DiracOperator.h  Pauli.h  RandomMatrixUtils.h  Simulation.h  SimulationData.hpp
source/: CMakeLists.txt  Clifford.cpp  DiracMatrices.cpp  DiracOperator.cpp  Pauli.cpp  README.md  RandomMatrixUtils.cpp  Simulation.cpp
tests/: CMakeLists.txt  CliffordTests.cpp  DiracOperatorTests.cpp  Type11SimulationTests.cpp
